--- a/VirtualScene.Entities/VirtualScene.Entities.csproj
+++ b/VirtualScene.Entities/VirtualScene.Entities.csproj
@@ -43,7 +43,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeometryEqualityHelper.cs" />
-    <Compile Include="ISceneEntity.cs" />
     <Compile Include="ISceneNavigator.cs" />
     <Compile Include="IStage.cs" />
     <Compile Include="MoveEventArgs.cs" />
@@ -53,7 +52,21 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="SceneEntity.cs" />
+    <Compile Include="SceneEntities\CubeEntity.cs" />
+    <Compile Include="SceneEntities\CustomEntity.cs" />
+    <Compile Include="SceneEntities\CylinderEntity.cs" />
+    <Compile Include="SceneEntities\DiskEntity.cs" />
+    <Compile Include="SceneEntities\Factories\CameraFactory.cs" />
+    <Compile Include="SceneEntities\Factories\CubeFactory.cs" />
+    <Compile Include="SceneEntities\Factories\HollowCylinderBuilder.cs" />
+    <Compile Include="SceneEntities\Factories\GearFactory.cs" />
+    <Compile Include="SceneEntities\Factories\GeometryFactoryBase.cs" />
+    <Compile Include="SceneEntities\HollowCylinderEntity.cs" />
+    <Compile Include="SceneEntities\ISceneEntity.cs" />
+    <Compile Include="SceneEntities\SceneElements\HollowCylinder.cs" />
+    <Compile Include="SceneEntities\SceneEntity.cs" />
+    <Compile Include="SceneEntities\SphereEntity.cs" />
+    <Compile Include="SceneEntities\SpurGearEntity.cs" />
     <Compile Include="SceneNavigator.cs" />
     <Compile Include="Stage.cs" />
     <Compile Include="Transformation.cs" />
